2012-08-15  Araki Ken  <arakiken@users.sf.net>

	* mlterm.1: Spelling mistake is fixed.
	  (SF Patch #3557298, Thanks to Ahmed El-Mahmoudy)

	* ml_vt100_parser.c: The bug which didn't reset modifyOtherKeys by
	  "CSI>m" is fixed.

2012-08-14  Araki Ken  <arakiken@users.sf.net>

	* kik_utmp_utmper.c: Fix conflicting types of kik_utmp_new.
	  (Thanks to KATO Masashi san)

2012-08-12  Araki Ken  <arakiken@users.sf.net>

	* mkf_tblfunc_loader.[ch]: If NO_DYNAMIC_LOAD_TABLE is defined,
	  the functions in these files are removed.

	* android/prepare.sh, android/Android.mk: Minor fixes.

2012-08-11  Araki Ken  <arakiken@users.sf.net>

	* android/: Added.

	* kik_pty_streams.c: Fixes for android.

2012-08-10  Araki Ken  <arakiken@users.sf.net>

	* 3.1.3 released.
	  (tag "rel-3_1_3")

	* configure.in, mlterm.spec, main/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.3.

2012-07-13  Araki Ken  <arakiken@users.sf.net>

	* kik_pty_streams.c, kik_bsd_streams.c:
	  - Even if fcntl() fails, processing is continued with warning message.
	    (fcntl(fd,F_SETFL,O_NDELAY) fails in Darwin Kernel Version 11.4.0: Mon Apr 9
	     19:32:15 PDT 2012 / i686-apple-darwin11-llvm-gcc-4.2)
	  - fcntl(fd,F_SETFL,O_NDELAY) -> fcntl(fd,F_SETFL,fcntl(fd,F_GETFL,0)|O_NDELAY).
	  (Thanks to saitoha san)

2012-07-12  Araki Ken  <arakiken@users.sf.net>

	* MLTermPty.java: mkdir() -> mkdirs() in order to make sure
	  to make parent directories of %HOMEPTH%\mlterm\java.

2012-07-07  Araki Ken  <arakiken@users.sf.net>

	* etc/main, etc/main.ja, doc/ja/README.ja, man/mlterm.1: Updated.

	* ml_screen.[ch], ml_edit.[ch], ml_term.[ch], ml_term_manager.[ch],
	  ml_vt100_parser.[ch], x_font_config.c, x_main_config.[ch], x_screen.c,
	  x_screen_manager.c, gtk/vte.c, java/MLTermPty.c:
	  Local echo mode which reflects keyboard inputs immediately is supported.
	  --loecho / "use_local_echo" option which enables or disables local echo
	  mode is added.

2012-06-26  Araki Ken  <arakiken@users.sf.net>
