@@ -1,4 +1,5 @@
 ver 3.1.4
+* Support 0x90...0x9c format for sixel graphics sequence.
 * Bug fixes:
   Fix conflicting types of kik_utmp_new. (Thanks to KATO Masashi san)
 
@@ -8,7 +9,7 @@ ver 3.1.3
   (see https://docs.google.com/document/d/1Dgq81J0eQEfjq3MR__O7VrbSVnatr9CCqMEITse9psk/edit?pli=1)
 * Support CSI SP q partially.
 * Support CSI [>4;2 m and CSI [>4;0m partially.
-  (Note that sequence from terminal is CSI [<code>;<mod>u, not CSI [27;<mod>;<code>~.)
+  (Note that sequence from terminal is CSI <code>;<mod>u, not CSI 27;<mod>;<code>~.)
 * Add "ssh_keepalive_interval" option.
 * Add "ssh_x11_forwarding" option.
 * Add "use_bold_font" option.
